[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Xi Rpc Lib - Tokio based implementation of the RPC used in the Xi editor"
homepage = "https://github.com/xi-frontend/xrl"
keywords = [
    "xi",
    "rpc",
    "json-rpc",
]
license-file = "LICENSE-MIT"
name = "xrl"
readme = "README.md"
repository = "https://github.com/xi-frontend/xrl"
version = "0.0.5"

[dependencies]
bytes = "0.4.6"
futures = "0.1.18"
log = "0.4.1"
serde = "1.0.31"
serde_derive = "1.0.31"
serde_json = "1.0.11"
tokio-core = "0.1.15"
tokio-io = "0.1.6"
tokio-process = "0.1.5"
syntect = { version = "2.0.0", default-features = false }

[dependencies.clippy]
optional = true
version = "0.0.187"
